# quic-web-chat

./: .gitignore  Cargo.toml  README.md
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx
frontend/src/components/: Chat.tsx  Login.tsx
frontend/src/services/: WebSocketService.ts
src/: chat.rs  main.rs
static/: index.html
